; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/extr_lookupbypath.c_test_object_lookupbypath__errors.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/extr_lookupbypath.c_test_object_lookupbypath__errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@g_actualobject = common dso_local global i32 0, align 4
@g_root_tree = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [24 x i8] c"subdir/subdir_test2.txt\00", align 1
@GIT_OBJECT_TREE = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"file/doesnt/exist\00", align 1
@GIT_OBJECT_ANY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_object_lookupbypath__errors() #0 {
  %1 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  %2 = load i64, i64* @g_root_tree, align 8
  %3 = inttoptr i64 %2 to i32*
  %4 = load i32, i32* @GIT_OBJECT_TREE, align 4
  %5 = call i32 @git_object_lookup_bypath(i32* @g_actualobject, i32* %3, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = call i32 @cl_assert_equal_i(i32 %1, i32 %5)
  %7 = load i32, i32* @GIT_ENOTFOUND, align 4
  %8 = load i64, i64* @g_root_tree, align 8
  %9 = inttoptr i64 %8 to i32*
  %10 = load i32, i32* @GIT_OBJECT_ANY, align 4
  %11 = call i32 @git_object_lookup_bypath(i32* @g_actualobject, i32* %9, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  %12 = call i32 @cl_assert_equal_i(i32 %7, i32 %11)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_object_lookup_bypath(i32*, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
